[metadata]
name = certbot-pkcs12
license = Apache-2.0
version = 0.1.0
description = "PKCS#12 installer plugin for Certbot and Let's Encrypt"
long_description = file:README.md
long_description_content_type = text/markdown
author = Leo Singer
author_email = leo.singer@ligo.org
url = https://github.com/lpsinger/certbot-pkcs12
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP
    Topic :: Security :: Cryptography

[options]
install_requires =
    certbot >= 1.19.0
    cryptography >= 3.0
py_modules = certbot_pkcs12
python_version = >= 3.8

[options.entry_points]
certbot.plugins =
    pkcs12 = certbot_pkcs12:Installer
